--- a/crates/building_blocks_core/Cargo.toml
+++ b/crates/building_blocks_core/Cargo.toml
@@ -22,7 +22,7 @@ morton-encoding = "2.0"
 num = "0.4"
 
 # Optional, feature-gated.
-bevy_reflect = {path = "../../../bevy/crates/bevy_reflect", optional = true}
+bevy_reflect = {version = "0.10", optional = true}
 cgmath = {version = "0.18", optional = true}
 glam = {version = "0.23", optional = true}
 mint = {version = "0.5.0", optional = true}
